--- a/pages/index.html
+++ b/pages/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
   </head>
   <body>
-    <!--Ashish Augustine - Quote Section Italics-->
+    <!--Ashish Augustine - Quote Section - Italics-->
 
-    <!--Ashish Augustine - Quote Section Italics-->
+    <!--Ashish Augustine - Quote Section - Italics-->
   </body>
 </html>
