--- a/pages/index.html
+++ b/pages/index.html
@@ -6,8 +6,13 @@
     <title>Document</title>
   </head>
   <body>
-    <!--Ashish Augustine - Quote Section - Italics-->
+    <!--Ruslan - Header Section-->
+    <!--Ruslan - Header Section-->
 
     <!--Ashish Augustine - Quote Section - Italics-->
+    <!--Ashish Augustine - Quote Section - Italics-->
+
+    <!--Ruslan - Footer Section-->
+    <!--Ruslan - Footer Section-->
   </body>
 </html>
