--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
     <title>Document</title>
   </head>
   <body>
-    <!--Ruslan - Header Section-->
-    <!--Ruslan - Header Section-->
-
-    <!--Ashish Augustine - Quote Section - Italics-->
-    <!--Ashish Augustine - Quote Section - Italics-->
-
-    <!--Ruslan - Footer Section-->
-    <!--Ruslan - Footer Section-->
+    <header>
+      <!--Ruslan - Header Section-->
+      <!--Ruslan - Header Section-->
+    </header>
+    <main>
+      <!--Ashish Augustine - Quote Section - Italics-->
+      <!--Ashish Augustine - Quote Section - Italics-->
+    </main>
+    <footer>
+      <!--Ruslan - Footer Section-->
+      <!--Ruslan - Footer Section-->
+    </footer>
   </body>
 </html>
