finished my section

--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <!--Ruslan - Header Section-->
+    <header>
+      <div class="sec1">
+        <div class="htext">
+          <h1 class="hmain">This website is awesome</h1>
+          <p class="hsec">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed luctus suscipit felis vitae pretium.
+            In in volutpat tellus. Sed id nulla enim. Integer scelerisque porta mi, vel luctus diam maximus ut.
+            Donec leo lacus, blandit et vehicula accumsan, aliquet sit amet arcu. Integer dictum aliquet nibh,
+          </p>
+          <a class="btn" href="">Sign up</a>
+        </div>
+        <div>
+          <img src="./images/img1.jpg" alt="Hertzoggies" class="img">
+        </div>
+      </div>
+    </header>
     <!--Ruslan - Header Section-->
 
     <!--Ashish Augustine - Quote Section - Italics-->
