--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <!--Ashish Augustine - Quote Section - Italics-->
       <!--Ashish Augustine - Quote Section - Italics-->
     </main>
-    <footer>
+    <footer>d
       <!--Ruslan - Footer Section-->
       <!--Ruslan - Footer Section-->
     </footer>
