--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!--Ruslan - Header Section-->
@@ -13,23 +13,25 @@
         <div class="htext">
           <h1 class="hmain">This website is awesome</h1>
           <p class="hsec">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed luctus suscipit felis vitae pretium.
-            In in volutpat tellus. Sed id nulla enim. Integer scelerisque porta mi, vel luctus diam maximus ut.
-            Donec leo lacus, blandit et vehicula accumsan, aliquet sit amet arcu. Integer dictum aliquet nibh,
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed luctus suscipit felis vitae pretium. In in volutpat
+            tellus. Sed id nulla enim. Integer scelerisque porta mi, vel luctus diam maximus ut. Donec leo lacus, blandit et
+            vehicula accumsan, aliquet sit amet arcu. Integer dictum aliquet nibh,
           </p>
           <a class="btn" href="">Sign up</a>
         </div>
         <div>
-          <img src="./images/img1.jpg" alt="Hertzoggies" class="img">
+          <img src="./images/img1.jpg" alt="Hertzoggies" class="img" />
         </div>
       </div>
     </header>
-    <!--Ruslan - Header Section-->
+    <main>
+      <!--Ruslan - Header Section-->
 
-    <!--Ashish Augustine - Quote Section - Italics-->
-    <!--Ashish Augustine - Quote Section - Italics-->
+      <!--Ashish Augustine - Quote Section - Italics-->
+      <!--Ashish Augustine - Quote Section - Italics-->
 
-    <!--Ruslan - Footer Section-->
-    <!--Ruslan - Footer Section-->
+      <!--Ruslan - Footer Section-->
+      <!--Ruslan - Footer Section-->
+    </main>
   </body>
 </html>
