--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Document</title>
   </head>
   <body>
-    <!--Ruslan - Header Section-->
+    <!--Jo - Header Section Top Nav-->
     <!--Ruslan - Header Section-->
 
     <!--Ashish Augustine - Quote Section - Italics-->
     <!--Ashish Augustine - Quote Section - Italics-->
 
     <!--Ruslan - Footer Section-->
-    <!--Ruslan - Footer Section-->
+    <!--Jo - Footer Section-->
   </body>
 </html>
