--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
       <!--Ashish Augustine - Quote Section - Italics-->
       <!--Ashish Augustine - Quote Section - Italics-->
-
+      <section class="quote">dfuhvduf</section>
       <!--Ruslan - Footer Section-->
       <!--Ruslan - Footer Section-->
     </main>
