--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
       <!--Ruslan - Header Section-->
 
       <!--Ashish Augustine - Quote Section - Italics-->
-      <section class="quote">dfuhvduf</section>
+      <section class="quote">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+        <div>-Thor</div>
+      </section>
       <!--Ashish Augustine - Quote Section - Italics-->
 
       <!--Ruslan - Footer Section-->
