--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <!--Jo - Header Section Top Nav-->
+    <header >
+      <nav id="top-nav">
+        <div>
+          <a href="./index.html">
+            <img id="logo" src="./images/Logo.png" alt="logo depicting Africa with a bite out of it" width="75px">
+          </a>
+        </div>
+        <p>A Bite of Africa</p>
+        <div class="navList">
+          <a href="#">About Us</a> 
+          <a href="#">Pastry Shop</a>   
+          <a href="#">Contact Us</a>  
+        </div> 
+      <nav>
+  </header>
     <!--Ruslan - Header Section-->
 
     <!--Ashish Augustine - Quote Section - Italics-->
