--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
       <!--Ashish Augustine - Quote Section - Italics-->
       <section class="quote">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip labore commodo consequat.
         <div>-Thor</div>
       </section>
       <!--Ashish Augustine - Quote Section - Italics-->
