additional nav item

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <div class="navList">
           <a href="#">About Us</a> 
           <a href="#">Pastry Shop</a>   
+          <a href="#">Pastry Blog </a>
           <a href="#">Contact Us</a>  
         </div> 
       <nav>
