--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <body>  
     <header>
       <!--Jo - Header Section Top Nav-->
-      <nav id="top-nav">
-        <div>
+      <nav>
+        <div id="coDet">
           <a href="./index.html">
             <img id="logo" src="./images/Logo.png" alt="logo depicting Africa with a bite out of it" width="75px">
           </a>
+          <p>A Bite of Africa</p>
         </div>
-        <p>A Bite of Africa</p>
         <div class="navList">
           <a href="#">About Us</a> 
           <a href="#">Pastry Shop</a>   
@@ -50,5 +50,14 @@
       <!--Ashish Augustine - Quote Section - Italics-->
     </main>
       <!--Jo - Footer Section-->
+      <footer>
+        <h4>A Bite of Africa®</h4>
+        <p>
+          Authors: <em>
+            Amr Mohamed | Ashish Augustine | Jo Daniels |
+             Ruslan Rezunenko | Yousef Arrafat</em>
+        </p>
+        <p>Copyright©</p>
+      </footer>
   </body>
 </html>
