--- a/index.html
+++ b/index.html
@@ -51,13 +51,15 @@
     </main>
       <!--Jo - Footer Section-->
       <footer>
-        <h4>A Bite of Africa®</h4>
+        <a href="#coDet">
+          <em>Back to Top</em>
+        </a>
         <p>
           Authors: <em>
             Amr Mohamed | Ashish Augustine | Jo Daniels |
              Ruslan Rezunenko | Yousef Arrafat</em>
         </p>
-        <p>Copyright©</p>
+        <p>A Bite of Africa® | Copyright©</p>
       </footer>
   </body>
 </html>
