--- a/pages/products.html
+++ b/pages/products.html
@@ -32,32 +32,101 @@
       <div class="image-grid-container">
         <!-- First row -->
         <div class="image-grid-item">
-          Title<img src="../images/image1.jpg" alt="Image 1" />desription <button class="buy">Buy</button>
+          <p>Title</p>
+          <img src="../images/image1.jpg" alt="Image 1" />
+          <p>Description <button class="buy">Buy</button></p>
         </div>
-        <div class="image-grid-item">fr<img src="../images/image2.jpg" alt="Image 2" /></div>
-        <div class="image-grid-item"><img src="../images/image3.jpg" alt="Image 3" /></div>
-        <div class="image-grid-item"><img src="../images/image4.jpg" alt="Image 4" /></div>
+        <div class="image-grid-item">
+          <p>Title</p>
+          <img src="../images/image1.jpg" alt="Image 1" />
+          <p>Description <button class="buy">Buy</button></p>
+        </div>
+        <div class="image-grid-item">
+          <p>Title</p>
+          <img src="../images/image1.jpg" alt="Image 1" />
+          <p>Description <button class="buy">Buy</button></p>
+        </div>
+        <div class="image-grid-item">
+          <p>Title</p>
+          <img src="../images/image1.jpg" alt="Image 1" />
+          <p>Description <button class="buy">Buy</button></p>
+        </div>
 
         <!-- Second row -->
-        <div class="image-grid-item"><img src="../images/image5.jpg" alt="Image 5" /></div>
-        <div class="image-grid-item"><img src="../images/image6.jpg" alt="Image 6" /></div>
-        <div class="image-grid-item"><img src="../images/image7.jpg" alt="Image 7" /></div>
-        <div class="image-grid-item"><img src="../images/image8.jpg" alt="Image 8" /></div>
+        <div class="image-grid-item">
+          <p>Title</p>
+          <img src="../images/image1.jpg" alt="Image 1" />
+          <p>Description <button class="buy">Buy</button></p>
+        </div>
+        <div class="image-grid-item">
+          <p>Title</p>
+          <img src="../images/image1.jpg" alt="Image 1" />
+          <p>Description <button class="buy">Buy</button></p>
+        </div>
+        <div class="image-grid-item">
+          <p>Title</p>
+          <img src="../images/image1.jpg" alt="Image 1" />
+          <p>Description <button class="buy">Buy</button></p>
+        </div>
+        <div class="image-grid-item">
+          <p>Title</p>
+          <img src="../images/image1.jpg" alt="Image 1" />
+          <p>Description <button class="buy">Buy</button></p>
+        </div>
 
         <!-- Third row -->
-        <div class="image-grid-item"><img src="../images/image9.jpg" alt="Image 9" /></div>
-        <div class="image-grid-item"><img src="../images/image10.jpg" alt="Image 10" /></div>
-        <div class="image-grid-item"><img src="../images/image11.jpg" alt="Image 11" /></div>
-        <div class="image-grid-item"><img src="../images/image12.jpg" alt="Image 12" /></div>
+        <div class="image-grid-item">
+          <p>Title</p>
+          <img src="../images/image1.jpg" alt="Image 1" />
+          <p>Description <button class="buy">Buy</button></p>
+        </div>
+        <div class="image-grid-item">
+          <p>Title</p>
+          <img src="../images/image1.jpg" alt="Image 1" />
+          <p>Description <button class="buy">Buy</button></p>
+        </div>
+        <div class="image-grid-item">
+          <p>Title</p>
+          <img src="../images/image1.jpg" alt="Image 1" />
+          <p>Description <button class="buy">Buy</button></p>
+        </div>
+        <div class="image-grid-item">
+          <p>Title</p>
+          <img src="../images/image1.jpg" alt="Image 1" />
+          <p>Description <button class="buy">Buy</button></p>
+        </div>
 
         <!-- Fourth row -->
-        <div class="image-grid-item"><img src="../images/image13.jpg" alt="Image 13" /></div>
-        <div class="image-grid-item"><img src="../images/image14.jpg" alt="Image 14" /></div>
-        <div class="image-grid-item"><img src="../images/image15.jpg" alt="Image 15" /></div>
-        <div class="image-grid-item"><img src="../images/image16.jpg" alt="Image 16" /></div>
+        <div class="image-grid-item">
+          <p>Title</p>
+          <img src="../images/image1.jpg" alt="Image 1" />
+          <p>Description <button class="buy">Buy</button></p>
+        </div>
+        <div class="image-grid-item">
+          <p>Title</p>
+          <img src="../images/image1.jpg" alt="Image 1" />
+          <p>Description <button class="buy">Buy</button></p>
+        </div>
+        <div class="image-grid-item">
+          <p>Title</p>
+          <img src="../images/image1.jpg" alt="Image 1" />
+          <p>Description <button class="buy">Buy</button></p>
+        </div>
+        <div class="image-grid-item">
+          <p>Title</p>
+          <img src="../images/image1.jpg" alt="Image 1" />
+          <p>Description <button class="buy">Buy</button></p>
+        </div>
       </div>
     </main>
 
-    <footer>Footer comes here</footer>
+    <!--Jo - Footer Section-->
+    <footer>
+      <a href="#coDet">
+        <em>Back to Top</em>
+      </a>
+      <p>Authors: <em> Amr Mohamed | Ashish Augustine | Jo Daniels | Ruslan Rezunenko | Yousef Arrafat</em></p>
+      <p>A Bite of Africa® | Copyright©</p>
+    </footer>
   </body>
 </html>
