added blog page

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <div class="navList">
           <a href="#">About Us</a> 
           <a href="#">Pastry Shop</a>   
-          <a href="#">Pastry Blog </a>
+          <a href="./pages/blog.html">Pastry Blog </a>
           <a href="#">Contact Us</a>  
         </div> 
-      <nav>
+      </nav>
          <!--Ruslan - Header Section-->
       <div class="sec1">
         <div class="htext">
