--- a/pages/products.html
+++ b/pages/products.html
@@ -34,88 +34,88 @@
         <div class="image-grid-item">
           <p>Title</p>
           <img src="../images/image1.jpg" alt="Image 1" />
-          <p>Description <button class="buy">Buy</button></p>
+          <p>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></p>
         </div>
         <div class="image-grid-item">
           <p>Title</p>
           <img src="../images/image1.jpg" alt="Image 1" />
-          <p>Description <button class="buy">Buy</button></p>
+          <p>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></p>
         </div>
         <div class="image-grid-item">
           <p>Title</p>
           <img src="../images/image1.jpg" alt="Image 1" />
-          <p>Description <button class="buy">Buy</button></p>
+          <p>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></p>
         </div>
         <div class="image-grid-item">
           <p>Title</p>
           <img src="../images/image1.jpg" alt="Image 1" />
-          <p>Description <button class="buy">Buy</button></p>
+          <p>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></p>
         </div>
 
         <!-- Second row -->
         <div class="image-grid-item">
           <p>Title</p>
           <img src="../images/image1.jpg" alt="Image 1" />
-          <p>Description <button class="buy">Buy</button></p>
+          <p>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></p>
         </div>
         <div class="image-grid-item">
           <p>Title</p>
           <img src="../images/image1.jpg" alt="Image 1" />
-          <p>Description <button class="buy">Buy</button></p>
+          <p>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></p>
         </div>
         <div class="image-grid-item">
           <p>Title</p>
           <img src="../images/image1.jpg" alt="Image 1" />
-          <p>Description <button class="buy">Buy</button></p>
+          <p>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></p>
         </div>
         <div class="image-grid-item">
           <p>Title</p>
           <img src="../images/image1.jpg" alt="Image 1" />
-          <p>Description <button class="buy">Buy</button></p>
+          <p>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></p>
         </div>
 
         <!-- Third row -->
         <div class="image-grid-item">
           <p>Title</p>
           <img src="../images/image1.jpg" alt="Image 1" />
-          <p>Description <button class="buy">Buy</button></p>
+          <p>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></p>
         </div>
         <div class="image-grid-item">
           <p>Title</p>
           <img src="../images/image1.jpg" alt="Image 1" />
-          <p>Description <button class="buy">Buy</button></p>
+          <p>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></p>
         </div>
         <div class="image-grid-item">
           <p>Title</p>
           <img src="../images/image1.jpg" alt="Image 1" />
-          <p>Description <button class="buy">Buy</button></p>
+          <p>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></p>
         </div>
         <div class="image-grid-item">
           <p>Title</p>
           <img src="../images/image1.jpg" alt="Image 1" />
-          <p>Description <button class="buy">Buy</button></p>
+          <p>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></p>
         </div>
 
         <!-- Fourth row -->
         <div class="image-grid-item">
           <p>Title</p>
           <img src="../images/image1.jpg" alt="Image 1" />
-          <p>Description <button class="buy">Buy</button></p>
+          <p>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></p>
         </div>
         <div class="image-grid-item">
           <p>Title</p>
           <img src="../images/image1.jpg" alt="Image 1" />
-          <p>Description <button class="buy">Buy</button></p>
+          <p>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></p>
         </div>
         <div class="image-grid-item">
           <p>Title</p>
           <img src="../images/image1.jpg" alt="Image 1" />
-          <p>Description <button class="buy">Buy</button></p>
+          <p>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></p>
         </div>
         <div class="image-grid-item">
           <p>Title</p>
           <img src="../images/image1.jpg" alt="Image 1" />
-          <p>Description <button class="buy">Buy</button></p>
+          <p>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></p>
         </div>
       </div>
     </main>
