amended unclosed tags

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -132,11 +132,11 @@
             </form>
             <br>
             <ul>
-                <li><a href="#">Morroco</li>
+                <li><a href="#">Morroco</a></li>
                 <li><a href="#">South Africa</a></li>
                 <li><a href="#">Tunisia</a></li>
                 <li><a href="#">Egypt</a></li>
-                <li><a href="#">North Africa</li>
+                <li><a href="#">North Africa</a></li>
             </ul>
         </aside>
     </main>
