--- a/pages/about.html
+++ b/pages/about.html
@@ -8,6 +8,20 @@
 </head>
 <body>
   <header>
+    <nav>
+      <div id="coDet">
+        <a href="./index.html">
+          <img id="logo" src="./images/Logo.png" alt="logo depicting Africa with a bite out of it" width="75px">
+        </a>
+        <p>A Bite of Africa</p>
+      </div>
+      <div class="navList">
+        <a href="#">About Us</a>
+        <a href="#">Pastry Shop</a>
+        <a href="./pages/blog.html">Pastry Blog </a>
+        <a href="#">Contact Us</a>
+      </div>
+    </nav>
     <div class="sec1">
       <div class="htext">
         <h1 class="hmain">About us</h1>
@@ -81,5 +95,16 @@
       </div>
     </div>
   </main>
+  <footer>
+    <a href="#coDet">
+      <em>Back to Top</em>
+    </a>
+    <p>
+      Authors: <em>
+      Amr Mohamed | Ashish Augustine | Jo Daniels |
+      Ruslan Rezunenko | Yousef Arrafat</em>
+    </p>
+    <p>A Bite of Africa® | Copyright©</p>
+  </footer>
 </body>
 </html>
