--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         </a>
         <p>
           Authors: <em>
-            Amr Mohamed | Ashish Augustine | Jo Daniels |
-             Ruslan Rezunenko | Yousef Arrafat</em>
+            Amr R. Mohamed | Ashish Augustine | Jo Daniels |
+             Ruslan Rezunenko | Yousef Raafat</em>
         </p>
         <p>A Bite of Africa® | Copyright©</p>
       </footer>
