--- a/pages/about.html
+++ b/pages/about.html
@@ -10,7 +10,7 @@
   <header>
     <nav>
       <div id="coDet">
-        <a href="./index.html">
+        <a href="../index.html">
           <img id="logo" src="../images/Logo.png" alt="logo depicting Africa with a bite out of it" width="75px">
         </a>
         <p>A Bite of Africa</p>
