--- a/pages/about.html
+++ b/pages/about.html
@@ -18,7 +18,7 @@
       <div class="navList">
         <a href="#">About Us</a>
         <a href="#">Pastry Shop</a>
-        <a href="./pages/blog.html">Pastry Blog </a>
+        <a href="../pages/blog.html">Pastry Blog </a>
         <a href="#">Contact Us</a>
       </div>
     </nav>
