--- a/index.html
+++ b/index.html
@@ -6,24 +6,24 @@
     <title>A Bite of Africa</title>
     <link rel="stylesheet" href="style.css" type="text/css" />
   </head>
-  <body>  
+  <body>
     <header>
       <!--Jo - Header Section Top Nav-->
       <nav>
         <div id="coDet">
           <a href="./index.html">
-            <img id="logo" src="./images/Logo.png" alt="logo depicting Africa with a bite out of it" width="75px">
+            <img id="logo" src="./images/Logo.png" alt="logo depicting Africa with a bite out of it" width="75px" />
           </a>
           <p>A Bite of Africa</p>
         </div>
         <div class="navList">
-          <a href="#">About Us</a> 
-          <a href="#">Pastry Shop</a>   
+          <a href="#">About Us</a>
+          <a href="./pages/products.html">Pastry Shop</a>
           <a href="./pages/blog.html">Pastry Blog </a>
-          <a href="#">Contact Us</a>  
-        </div> 
+          <a href="#">Contact Us</a>
+        </div>
       </nav>
-         <!--Ruslan - Header Section-->
+      <!--Ruslan - Header Section-->
       <div class="sec1">
         <div class="htext">
           <h1 class="hmain">This website is awesome</h1>
@@ -44,22 +44,19 @@
       <section class="quote">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
         aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip labore commodo consequat.
-        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip labore commodo consequat.
         <div>-Thor</div>
       </section>
       <!--Ashish Augustine - Quote Section - Italics-->
     </main>
-      <!--Jo - Footer Section-->
-      <footer>
-        <a href="#coDet">
-          <em>Back to Top</em>
-        </a>
-        <p>
-          Authors: <em>
-            Amr R. Mohamed | Ashish Augustine | Jo Daniels |
-             Ruslan Rezunenko | Yousef Raafat</em>
-        </p>
-        <p>A Bite of Africa® | Copyright©</p>
-      </footer>
+    <!--Ruslan - Footer Section-->
+    <!--Ruslan - Footer Section-->
+    <!--Jo - Footer Section-->
+    <footer>
+      <a href="#coDet">
+        <em>Back to Top</em>
+      </a>
+      <p>Authors: <em> Amr R. Mohamed | Ashish Augustine | Jo Daniels | Ruslan Rezunenko | Yousef Raafat</em></p>
+      <p>A Bite of Africa® | Copyright©</p>
+    </footer>
   </body>
 </html>
