--- a/pages/blog.html
+++ b/pages/blog.html
@@ -17,7 +17,7 @@
         </div>
         <div class="navList">
           <a href="#">About Us</a> 
-          <a href="#">Pastry Shop</a>   
+          <a href="./products.html">Pastry Shop</a>   
           <a href="./blog.html">Pastry Blog </a>
           <a href="#">Contact Us</a>  
         </div> 
