--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <p>A Bite of Africa</p>
         </div>
         <div class="navList">
-          <a href="#">About Us</a>
+          <a href="./pages/about.html">About Us</a>
           <a href="./pages/products.html">Pastry Shop</a>
           <a href="./pages/blog.html">Pastry Blog </a>
           <a href="#">Contact Us</a>
