--- a/pages/about.html
+++ b/pages/about.html
@@ -15,12 +15,12 @@
         </a>
         <p>A Bite of Africa</p>
       </div>
-      <div class="navList">
-        <a href="#">About Us</a>
-        <a href="#">Pastry Shop</a>
-        <a href="./pages/blog.html">Pastry Blog </a>
-        <a href="#">Contact Us</a>
-      </div>
+       <div class="navList">
+          <a href="./pages/about.html">About Us</a>
+          <a href="./pages/products.html">Pastry Shop</a>
+          <a href="./pages/blog.html">Pastry Blog </a>
+          <a href="#">Contact Us</a>
+        </div>
     </nav>
     <div class="sec1">
       <div class="htext">
