--- a/pages/blog.html
+++ b/pages/blog.html
@@ -16,11 +16,11 @@
           <p>A Bite of Africa</p>
         </div>
         <div class="navList">
-          <a href="#">About Us</a> 
-          <a href="./products.html">Pastry Shop</a>   
-          <a href="./blog.html">Pastry Blog </a>
-          <a href="#">Contact Us</a>  
-        </div> 
+          <a href="./pages/about.html">About Us</a>
+          <a href="./pages/products.html">Pastry Shop</a>
+          <a href="./pages/blog.html">Pastry Blog </a>
+          <a href="#">Contact Us</a>
+        </div>
       </nav>
         <div class="sec1">
             <div class="htext">
