--- a/pages/products.html
+++ b/pages/products.html
@@ -27,7 +27,7 @@
 
     <!--Jo - Header Section Top Nav-->
     <main>
-      <div class="title"><h1>Products</h1></div>
+      <div class="title"><h1>Pastry Shop</h1></div>
 
       <div class="image-grid-container">
         <!-- First row -->
