--- a/pages/products.html
+++ b/pages/products.html
@@ -17,10 +17,10 @@
           <p>A Bite of Africa</p>
         </div>
         <div class="navList">
-          <a href="#">About Us</a>
-          <a href="#">Pastry Shop</a>
-          <a href="#">Pastry Blog </a>
-          <a href="#">Contact Us</a>
+          <a href="./about.html">About Us</a>
+          <a href="./products.html">Pastry Shop</a>
+          <a href="./blog.html">Pastry Blog </a>
+          <a href="./contact.html">Contact Us</a>
         </div>
       </nav>
     </header>
@@ -38,34 +38,34 @@
         </div>
         <div class="image-grid-item">
           <p>Title</p>
-          <img src="../images/1.Kunafah.jpg" alt="Image 1" />
+          <img src="../images/pastry_6.jpg" alt="Image 1" />
           <p>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></p>
         </div>
         <div class="image-grid-item">
           <p>Title</p>
-          <img src="../images/1.Kunafah.jpg" alt="Image 1" />
+          <img src="../images/pastry_8.jpg" alt="Image 1" />
           <p>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></p>
         </div>
         <div class="image-grid-item">
           <p>Title</p>
-          <img src="../images/1.Kunafah.jpg" alt="Image 1" />
+          <img src="../images/5.kaab_el_ghazal.jpg" alt="Image 1" />
           <p>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></p>
         </div>
 
         <!-- Second row -->
         <div class="image-grid-item">
           <p>Title</p>
-          <img src="../images/1.Kunafah.jpg" alt="Image 1" />
+          <img src="../images/pastry_1.jpg" alt="Image 1" />
           <p>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></p>
         </div>
         <div class="image-grid-item">
           <p>Title</p>
-          <img src="../images/1.Kunafah.jpg" alt="Image 1" />
+          <img src="../images/pastry_4.jpg" alt="Image 1" />
           <p>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></p>
         </div>
         <div class="image-grid-item">
           <p>Title</p>
-          <img src="../images/1.Kunafah.jpg" alt="Image 1" />
+          <img src="../images/pastry_3.jpg" alt="Image 1" />
           <p>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></p>
         </div>
         <div class="image-grid-item">
@@ -77,7 +77,7 @@
         <!-- Third row -->
         <div class="image-grid-item">
           <p>Title</p>
-          <img src="../images/1.Kunafah.jpg" alt="Image 1" />
+          <img src="../images/pastry_7.jpg" alt="Image 1" />
           <p>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></p>
         </div>
         <div class="image-grid-item">
@@ -87,12 +87,12 @@
         </div>
         <div class="image-grid-item">
           <p>Title</p>
-          <img src="../images/1.Kunafah.jpg" alt="Image 1" />
+          <img src="../images/pastry_8.jpg" alt="Image 1" />
           <p>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></p>
         </div>
         <div class="image-grid-item">
           <p>Title</p>
-          <img src="../images/1.Kunafah.jpg" alt="Image 1" />
+          <img src="../images/pastry_9.jpg" alt="Image 1" />
           <p>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></p>
         </div>
 
@@ -104,12 +104,12 @@
         </div>
         <div class="image-grid-item">
           <p>Title</p>
-          <img src="../images/1.Kunafah.jpg" alt="Image 1" />
+          <img src="../images/pastry_4.jpg" alt="Image 1" />
           <p>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></p>
         </div>
         <div class="image-grid-item">
           <p>Title</p>
-          <img src="../images/1.Kunafah.jpg" alt="Image 1" />
+          <img src="../images/tunisian_brik.jpeg" alt="Image 1" />
           <p>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></p>
         </div>
         <div class="image-grid-item">
