--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
           <a href="#">About Us</a> 
           <a href="#">Pastry Shop</a>   
           <a href="./pages/blog.html">Pastry Blog </a>
-          <a href="#">Contact Us</a>  
-        </div> 
+          <a href="https://github.com/arsmohamed/kreativestorm-tasks" target="_blank">Contact Us</a>
+        </div>
       </nav>
          <!--Ruslan - Header Section-->
       <div class="sec1">
@@ -49,17 +49,15 @@
       </section>
       <!--Ashish Augustine - Quote Section - Italics-->
     </main>
-      <!--Jo - Footer Section-->
-      <footer>
-        <a href="#coDet">
-          <em>Back to Top</em>
-        </a>
-        <p>
-          Authors: <em>
-            Amr Mohamed | Ashish Augustine | Jo Daniels |
-             Ruslan Rezunenko | Yousef Arrafat</em>
-        </p>
-        <p>A Bite of Africa® | Copyright©</p>
-      </footer>
+    <!--Ruslan - Footer Section-->
+    <!--Ruslan - Footer Section-->
+    <!--Jo - Footer Section-->
+    <footer>
+      <a href="#coDet">
+        <em>Back to Top</em>
+      </a>
+      <p>Authors: <em> Amr R. Mohamed | Ashish Augustine | Jo Daniels | Ruslan Rezunenko | Yousef Raafat</em></p>
+      <p>A Bite of Africa® | Copyright©</p>
+    </footer>
   </body>
 </html>
