--- a/pages/blog.html
+++ b/pages/blog.html
@@ -258,12 +258,11 @@
       <a href="#coDet">
         <em>Back to Top</em>
       </a>
-      <p>
-        Authors:
-        <em>
-          Amr Mohamed | Ashish Augustine | Jo Daniels | Ruslan Rezunenko |
-          Yousef Arrafat</em
-        >
+      <p>Authors: <em> Amr R. Mohamed | Ashish Augustine | Jo Daniels | Ruslan Rezunenko | Yousef Raafat</em></p>
+      <p>To view the full project, click 
+        <a href="https://github.com/arsmohamed/kreativestorm-tasks">
+          <em>here</em>
+        </a>
       </p>
       <p>A Bite of Africa® | Copyright©</p>
     </footer>
