--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
         <em>Back to Top</em>
       </a>
       <p>Authors: <em> Amr R. Mohamed | Ashish Augustine | Jo Daniels | Ruslan Rezunenko | Yousef Raafat</em></p>
+      <p>To view the full project, click 
+        <a href="https://github.com/arsmohamed/kreativestorm-tasks">
+          <em>here</em>
+        </a>
+      </p>
       <p>A Bite of Africa® | Copyright©</p>
     </footer>
   </body>
