--- a/pages/products.html
+++ b/pages/products.html
@@ -23,7 +23,7 @@
         </div>
       </nav>
     </header>
-    <main>
+    <main class="onlineshopping">
       <div class="shoponline"><h1>Shop Online</h1></div>
 
       <section class="image-grid-container">
